Migrate to sbt 1.0.0 #38 - fix scritped plugin usage